c4prj3_finish/grade.txt
Grading at Fri Jul  3 17:14:52 UTC 2020
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o main.o main.c
main.c: In function ‘get_best_hand_idx’:
main.c:31:63: error: ‘card_ptr_comp’ undeclared (first use in this function)
     qsort(decks[i]->cards, decks[i]->n_cards, sizeof(card_t), card_ptr_comp);
                                                               ^
main.c:31:63: note: each undeclared identifier is reported only once for each function it appears in
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
make failed

Overall Grade: F
